add Angular Modules

--- a/package.json
+++ b/package.json
@@ -73,5 +73,13 @@
   },
   "engines": {
     "node": ">=10.13.0"
+  },
+  "dependencies": {
+    "@angular/animations": "10.2.1",
+    "@angular/cdk": "10.2.7",
+    "@angular/material": "10.2.7",
+    "add": "2.0.6",
+    "bulma": "0.9.1",
+    "ng": "0.0.0"
   }
 }
